<resources>
    <!-- General -->
    <string name="app_name">Rents</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="modify">Modify</string>
    <string name="tryAgain">Try again</string>
    <string name="send">Send</string>
    <!-- Login activity -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="runningConnection">Connection already running</string>
    <!-- Main activity -->
    <string name="sign_out">Sign out</string>
    <string name="popup_message_title">Message</string>
    <!-- Rent activity -->
    <string name="tenant">Tenant:</string>
    <string name="tenants">Tenants:</string>
    <string name="rent">Rent:</string>
    <string name="noRentFree">Rent not free those days</string>
    <string name="noRentBusy">No booking selected</string>
    <string name="noDateSelected">Please select several days on the calendar</string>
    <string name="addBookingTitle">Add a booking</string>
    <string name="removeBookingTitle">Remove a booking</string>
    <string name="modifyBookingTitle">Modify a booking</string>
    <string name="noBookingRight">You haven\'t the right to add or remove a booking</string>
    <string name="newBooking">New booking added</string>
    <string name="bookingRemoved">Booking removed</string>
    <string name="bookingModified">Booking modified</string>
    <string name="prices">Prices</string>
    <string name="emptyTenant">Please inform a tenant</string>
    <string name="selectDateLabel">Select a date</string>
    <!-- Prices activity -->
    <string name="noEditPriceRight">No right for editing prices</string>
    <string name="changeSpinnerTitle">Do you want to continue ?</string>
    <string name="changesWillBeLost">Changes might be lost.</string>
    <string name="changeSaved">Changes have been saved</string>
    <string name="copyPrices">Copy prices</string>
    <!-- Settings activity -->
    <string name="changePassword">Change password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirmation">Confirmation</string>
    <string name="newPasswordSaved">New password saved</string>
    <string name="confirmationIncorrect">Confirmation incorrect</string>
    <string name="atLeast8Char">New password must contain at least 8 characters</string>
    <string name="activate_statistics">Activate statistics</string>
    <string name="add_remove_message">Add / Remove a message</string>
    <string name="add_message">Add a message</string>
    <string name="messageSent">Message sent</string>
    <string name="messageRemoved">Message removed</string>
    <string name="noMessage">No message present</string>
    <!-- Errors -->
    <string name="connectionError">Connection error: check your internet connection.</string>
    <string name="rentNotFreeError">Error: Rent not free this week.</string>
    <string name="bookingNotExistError">Error: Booking doesn\'t exist.</string>
    <string name="internalError">Internal error</string>
    <string name="accessDeniedError">Username or Password invalid</string>
    <string name="passwordIncorrect">Password incorrect</string>
    <string name="anErrorOccurred">An error occurred.</string>
    <!-- Statistics activity -->
    <string name="rentsPerMonth">Rents per month</string>
    <string name="rentsPerYear">Rents per year</string>
    <string-array name="monthNames">
        <item>JAN</item>
        <item>FEB</item>
        <item>MAR</item>
        <item>APR</item>
        <item>MAY</item>
        <item>JUN</item>
        <item>JUL</item>
        <item>AUG</item>
        <item>SEP</item>
        <item>OCT</item>
        <item>NOV</item>
        <item>DEC</item>
    </string-array>
    <string name="year">Year</string>
    <string name="globalStatistics">Global</string>
</resources>
