<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/darkBlue" />

    <TextView
        android:id="@+id/rent_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/darkBlue"
        android:text="@string/rent"
        android:layout_below="@id/date"/>

    <Spinner
        android:id="@+id/rent_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:layout_below="@id/rent_label">

    </Spinner>

    <TextView
        android:id="@+id/tenant_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tenant"
        android:textColor="@color/darkBlue"
        android:layout_below="@id/rent_choice"/>

    <EditText
        android:id="@+id/tenant_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@id/tenant_label"/>

    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/emptyTenant"
        android:visibility="gone"
        android:layout_below="@id/tenant_edit"/>

</RelativeLayout>